# Catch2

./: BUILD.gn  README.ez
include/internal/: catch_decomposer.h  catch_xmlwriter.cpp
projects/SelfTest/Baselines/: compact.sw.approved.txt  console.std.approved.txt  console.sw.approved.txt  console.swa4.approved.txt  junit.sw.approved.txt  xml.sw.approved.txt
projects/SelfTest/IntrospectiveTests/: Xml.tests.cpp
projects/SelfTest/UsageTests/: Compilation.tests.cpp
